--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
   <h1>Welcome to My GitHub Pages</h1>
+  <p><img src="2025-08-10-cef-as-muppet.jpg" alt="ceford in the style of a muppet" width="512" height="768">
   <p>Here are some of my projects:</p>
   <ul>
     <li><a href="https://ceford.github.io/cefjdemos-jdocmanual/">Jdocmanual</a></li>
