--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Ceford's Projects</title>
+  <title>Projects by Cliff Ford</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -26,11 +26,12 @@
     }
     img {
       max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My GitHub Pages</h1>
+  <h1>Welcome to my GitHub Repositories</h1>
   <p><img src="2025-08-10-cef-as-muppet.jpg" alt="ceford in the style of a muppet" width="512" height="768">
   <p>Here are some of my projects:</p>
   <ul>
