Changed link for jdocmanual

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p><img src="2025-08-10-cef-as-muppet.jpg" alt="ceford in the style of a muppet" width="512" height="768">
   <p>Here are some of my projects:</p>
   <ul>
-    <li><a href="https://ceford.github.io/cefjdemos-jdocmanual/">Jdocmanual</a></li>
+    <li><a href="https://jdocmanual.org/">Jdocmanual: a site for Joomla documentation</a></li>
     <li><a href="https://ceford.github.io/cefjdemos-pkg-gd-gb/">Joomla Language Pack for Scottish Gaelic</a></li>
   </ul>
 </body>
