New layout for links

--- a/index.html
+++ b/index.html
@@ -35,8 +35,19 @@
   <p><img src="2025-08-10-cef-as-muppet.jpg" alt="ceford in the style of a muppet" width="512" height="768">
   <p>Here are some of my projects:</p>
   <ul>
-    <li>Jdocmanual: a site for Joomla documentation (<a href="https://jdocmanual.org/">Site</a>, <a href="https://github.com/ceford/cefjdemos-com-jdm">Repository</a></li>
-    <li>Joomla Language Pack for Scottish Gaelic: <a href="https://github.com/ceford/cefjdemos-pkg-gd-gb">Repository</a></li>
+    <li>Jdocmanual: a site for Joomla documentation 
+      <ul>
+        <li><a href="https://jdocmanual.org/">Site</a></li>
+        <li><a href="https://github.com/ceford/cefjdemos-com-jdm">Repository</a></li>
+      </ul>
+    </li>
+    <li>Joomla Language Pack for Scottish Gaelic: 
+      <ul>
+        <li>
+          <a href="https://github.com/ceford/cefjdemos-pkg-gd-gb">Repository</a>
+        </li>
+      </ul>
+    </li>
   </ul>
 </body>
 </html>
